--- a/docs/L2.md
+++ b/docs/L2.md
@@ -2,11 +2,70 @@
 
 
 
+### STDP
+
+（spike-timing-dependent plasticity）
+
+STDP是生物大脑/神经学习方式的一种，它依赖于神经前后突触激活时间关系（$\Delta t$）来对连接处的权重进行增强（LTP）/抑制（LTD）。[Bi and Poo, 1998]
 
 
+- LTP（long-term potentiation）
 
+**前**突触**激活后**的20ms窗口期内**后突触**激活会导致“长时程增强”。
 
+- LTD（long-term depression）
 
+**后**突触**激活前**的20 ms窗口期内**前突触**激活会导致“长时程抑制”。
+
+### 模型定义
+
+（各种STDP模型都是对生物的STDP过程的**模拟/仿真**，各有优劣，这里只写一种）
+
+- 权重的改变过程$\Delta w$
+
+$$
+\Delta w = \sum_{t_{pre}} \sum_{t_{post}} W(t_{post}-t_{pre})
+$$
+
+- 用于描述LTP和LTD的函数$W(*)$
+
+$$
+\begin{split}W(\Delta t) = \begin{cases}
+A_{pre} e^{-\Delta t/\tau_{pre}} & \Delta t>0 \\
+A_{post} e^{\Delta t/\tau_{post}} & \Delta t<0
+\end{cases}\end{split}
+$$
+
+<img src="images/L2/4.png" style="zoom: 75%;" />
+
+#### 改用微分方程
+
+$$
+\begin{split}\begin{aligned}
+\tau_{pre}\frac{\mathrm{d}}{\mathrm{d}t} a_{pre} &= -a_{pre}\\
+\tau_{post}\frac{\mathrm{d}}{\mathrm{d}t} a_{post} &= -a_{post}
+\end{aligned}\end{split}
+$$
+
+- 前突触脉冲产生时（pre-synaptic spike）
+
+$$
+\begin{split}\begin{aligned}
+a_{pre} &\rightarrow a_{pre}+A_{pre}\\
+w &\rightarrow w+a_{post}
+\end{aligned}\end{split}
+$$
+
+- 前突触脉冲产生时（post-synaptic spike）
+
+$$
+\begin{split}\begin{aligned}
+a_{post} &\rightarrow a_{post}+A_{post}\\
+w &\rightarrow w+a_{pre}
+\end{aligned}\end{split}
+$$
+
+Tips：$a_{pre}$/$a_{post}$用于**动态累加**前/后突触激活
 
 ## 仿真代码及其结果
 
@@ -108,11 +167,21 @@ run(30*ms)
 
 <img src="images/L2/5.png" style="zoom: 75%;" />
 
+## 总结
+
+​		本节简述了存在于生物神经网络的一种学习过程“STDP”，通过微分方程描述了一种STDP的计算过程，由于在查阅资料过程中发现还有很多种STDP的实现过程，其中细节有所差别，但其核心依旧围绕**LTP**和**LTD**这两种发生在生物神经中的**现象**进行建模。本节在描述STDP时，没有涉及生物神经膜电位与及其离子通道等过程。（可参考[1]）
+
+​		下一节将研究如何基于SNN实现MLP、CNN等常用算子，并尝试构建简单的网络模型。
+
+代码已经上传到（https://github.com/StephenTaylor1998/SNN-Research）
 
 
 
+Reference:
 
-
+[1] Bi, G.-Q., and Poo, M.-M. (1998). Synaptic modifications in cultured hippocampal
+neurons: dependence on spike timing, synaptic strength, and postsynaptic cell
+type. J. Neurosci. 18, 10464–10472.
 
 
 
